# code-intel-kernel

./: .gitignore  Cargo.toml  README.md  SECURITY.md
config/: manifest.json  recommended-directory-name.txt
docs/: 00-product-brief.md  01-architecture.md  02-rd-research-map.md  03-mvp-roadmap.md  04-data-model.md  05-agent-tools.md  06-goalrail-integration.md  07-punk-integration.md  08-metrics-and-benchmarks.md  09-risks-and-guardrails.md  10-open-questions.md  SECURITY.md  context-pack-design.md  context-pack-json-contract-draft.md  evaluation-harness.md  extractor-quality.md  impact-json-contract.md  inspect-json-contract.md  localization-adversarial-readiness.md  localization-readiness-checklist.md  lsp-bridge-design.md  lsp-capability-matrix.md  lsp-diagnostics-json-contract.md  lsp-integration-boundaries.md  lsp-json-contract-draft.md  lsp-process-safety.md  phase-2a-symbolgraph-lite-plan.md  phase-3b-lsp-diagnostics-reference-plan.md  repo-vs-symbol-graph-boundary.md  source-context-json-contract.md  source-evidence-bundle.md  source-evidence-json-contract.md  symbolgraph-json-contract.md  symbolgraph-readiness-checklist.md
examples/: example-agent-event.json  example-evidence-bundle.json  example-process-reward.json  example-repo-map.json
notes/: adr-0001-rust-first.md  codex-initial-read.md  context-pack-idea.md  next-implementation-plan.md  phase-1b-contract-hardening.md  phase-1c-impact-skeleton.md  phase-1d-impact-traversal.md  phase-1e-a-extractor-quality.md  phase-1e-b-python-go-extraction.md  phase-1f-evaluation-harness.md  (+10 more)
research-radar/: README.md  (+9 more)
(+147 files in other folders)
