[package]
name = "code-intel-kernel"
version = "0.0.0"
edition = "2021"
description = "Local-first structural code intelligence kernel for agent evidence, repo maps, diagnostics, and typed memory."
publish = false

[lib]
name = "code_intel_kernel"
path = "src/lib.rs"

[[bin]]
name = "code-intel"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
